# simimibot

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
src/: config.py  i18.py  middleware.py  tgbot.py
src/background/: statistic.py
src/callback_data/: __init__.py  choose_potion.py
src/db/: __init__.py  main.py  potion.py  statistic.py  users.py
src/events/: __init__.py  daily_update.py  message_event.py
src/forms/: __init__.py  profile.py
src/keyboards/: __init__.py  potion.py
src/routers/: __init__.py  chat.py  commands.py  general.py  root.py
src/types/: __init__.py  potion.py  profile.py  rank.py  stats.py  user.py
src/utils/: list2matrix.py
